Fix label word wrap

--- a/src/definitions/elements/label.less
+++ b/src/definitions/elements/label.less
@@ -25,8 +25,9 @@
 
 .ui.label {
   display: inline-block;
-  vertical-align: @verticalAlign;
+  white-space: nowrap;
   line-height: 1;
+  vertical-align: @verticalAlign;
 
   margin: @verticalMargin @horizontalMargin;
 
@@ -42,7 +43,6 @@
   font-weight: @fontWeight;
 
   border-radius: @borderRadius;
-  box-sizing: border-box;
   transition: @transition;
 }
 
